src/test/resources/Parser/SyntaxErrors/UntypedVariable.front
class A:
    test () {
        a := null;
    }